# juice

./: .env.agent.sample  .gitignore  AGENT_LOOP.md  CLAUDE.md  Makefile  PROJECT.md  README.md  bundle.yml  pyproject.toml
.claude/skills/memory-bank/: SKILL.md
.github/workflows/: ci.yml
docs/: architecture.md  build.md  design.md  glossary.md  workspace.md
juice_storage/: __init__.py
namespaces/default/bundles/mcp_weather-bot/: bundle.yml
namespaces/default/bundles/weather-bot/: bundle.yml
namespaces/default/instances/tokyo-weather-bot/: index.yml
namespaces/default/python_packages/: README.md
namespaces/default/schedules/morning-brief/: index.md
namespaces/default/tools/weather/: index.md
namespaces/default/workflows/langfuse/: docker-compose.yml  index.md
namespaces/default/workflows/weather-service/: index.md
registries/actors/weather-bot/: index.md
registries/default/instances/tokyo-weather-bot/: index.yml
registries/default/mcp_bundled/weather-bot/: bundle.yml  index.md
registries/default/skills/report-weather/: SKILL.md
registries/default/tools/weather/: index.md
registries/default/workflows/morning-brief/: index.md
registries/instances/tokyo-weather-bot/: index.yml
registries/namespaces/default/subagents/forecaster/: index.md
registries/namespaces/default/tools/weather/: server.py
shoudou_storage/: __init__.py  async_storage.py  async_to_sync_storage.py  connect.py  safe_path.py  sync_storage.py
shoudou_storage/backends/: nats.py
shoudou_storage/tests/: test_storage.py
src/: __main__.py  config.py  factory.py  registry.py
src/cli/: __init__.py  _errors.py  deploy.py
src/cli/backends/: __init__.py  base.py  docker.py  k8s.py
src/core/: __init__.py  apply.py  bundle.py  catalog.py  config.py  deploy.py  digest.py  factory.py  index.py  lock.py  manifest.py  metadata.py  okf_catalog_cache.py  registry.py  semver.py  storage.py
src/juice/: __init__.py  cli.py  storage.py
tests/: conftest.py  test_apply.py  test_bundle.py  test_catalog.py  test_cli.py  test_deploy.py  test_digest.py  test_index.py  test_lock.py  test_manifest.py  test_metadata.py  test_okf_catalog_cache.py  test_plan.py  test_registry.py  test_semver.py  test_storage.py
tests_storage/: test_storage.py
